--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     height: 100vh;
 }
 
-.image-box {
+.image-box__one {
     display: flex;
     height: 100%;
     position: relative;
@@ -34,3 +34,45 @@ body {
     z-index: 4;
 }
 
+.image-box__two {
+    display: flex;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+    align-items: center;
+}
+
+.section__one {
+    width: 50%;
+    height: 100%;
+}
+
+.section__two {
+    width: 50%;
+    height: 100%;
+}
+
+
+.top {
+    width: 100%;
+    height: 50%;
+    background: red;
+}
+
+.bottom {
+    width: 100%;
+    height: 50%;
+    background: blue;
+}
+
+.section__two .image__one {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.section__two .image__two {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
